[package]
name = "cherrylog"
version = "0.1.0"
authors = ["Nick <lunyak.kolya@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.1"
degen = { path = "degen", version = "*"}
orders = { path = "orders", version = "*" }

[build-dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
Inflector = "*"
degen = { path = "degen", version = "*"}
building = { path = "building", version = "*" }
