[package]
name = "cash"
version = "0.1.0"
authors = ["Nick <lunyak.kolya@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.1"
helpers = { path = "helpers", version = "*" }
frontend = { path = "frontend", version = "*" }
backend = { path = "backend", version = "*" }
parsing = { path = "parsing", version = "*" }
processing = { path = "processing", version = "*" }
terminals = { path = "terminals", version = "*" }

[build-dependencies]
building = { path = "building", version = "*" }
