[package]
name = "building"
version = "0.1.0"
authors = ["Nick <lunyak.kolya@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
degen = { path = "../degen", version = "*"}
Inflector = "*"
